// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterElement /> Snapshot tests should render not disabled if checked 1`] = `
<div
  className="filter element"
>
  <div
    className="toggle"
  >
    <label
      className="switch"
    >
      <input
        checked={true}
        onChange={undefined}
        type="checkbox"
      />
      <div
        className="slider "
      />
    </label>
  </div>
  <div
    className="content"
  />
</div>
`;

exports[`<FilterElement /> Snapshot tests should render round if round 1`] = `
<div
  className="filter element"
>
  <div
    className="toggle"
  >
    <label
      className="switch"
    >
      <input
        checked={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <div
        className="slider round"
      />
    </label>
  </div>
  <div
    className="content"
  />
</div>
`;

exports[`<FilterElement /> Snapshot tests should render with children 1`] = `
<div
  className="filter element"
>
  <div
    className="toggle"
  >
    <label
      className="switch"
    >
      <input
        checked={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <div
        className="slider "
      />
    </label>
  </div>
  <div
    className="content"
  >
    <span>
      Some content here
    </span>
  </div>
</div>
`;

exports[`<FilterElement /> Snapshot tests should render with no children - disabled by default 1`] = `
<div
  className="filter element"
>
  <div
    className="toggle"
  >
    <label
      className="switch"
    >
      <input
        checked={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <div
        className="slider "
      />
    </label>
  </div>
  <div
    className="content"
  />
</div>
`;
